package cerberus.party.addons;

/**
 * Addons for parties consists of label and cost
 */
public class Addon {
    private String label;
    private double cost;

    public Addon(String label, double cost) {
        this.label = label;
        this.cost = cost;
    }

    public String getLabel() {
        return label;
    }

    public void setLabel(String label) {
        this.label = label;
    }

    public double getCost() {
        return cost;
    }

    public void setCost(double cost) {
        this.cost = cost;
    }
}
