package cerberus.party.filter;

public enum PaidPercent {
    All,
    p15,
    p0
}
