package cerberus.party.filter;

public enum PartyType {
    All,
    Birthday,
    Celebration,
    Farewell,
    Wedding
}
