@startuml

title __PARTY's Class Diagram__\n

  namespace cerberus {
    class cerberus.Main {
    }
  }
  

  namespace cerberus {
    namespace controllers {
      class cerberus.controllers.BaseController {
      }
    }
  }
  

  namespace cerberus {
    namespace controllers {
      class cerberus.controllers.ChartsController {
      }
    }
  }
  

  namespace cerberus {
    namespace controllers {
      class cerberus.controllers.NewController {
      }
    }
  }
  

  namespace cerberus {
    namespace controllers {
      class cerberus.controllers.PartiesController {
      }
    }
  }
  

  namespace cerberus {
    namespace database {
      class cerberus.database.Database {
      }
    }
  }
  

  namespace cerberus {
    namespace helper.date {
      class cerberus.helper.date.DateTimeHelper {
      }
    }
  }
  

  namespace cerberus {
    namespace helper.date {
      class cerberus.helper.date.LocalDateDifference {
      }
    }
  }
  

  namespace cerberus {
    namespace helper.date {
      class cerberus.helper.date.LocalTimeDifference {
      }
    }
  }
  

  namespace cerberus {
    namespace helper.fx {
      class cerberus.helper.fx.NodeHelper {
      }
    }
  }
  

  namespace cerberus {
    namespace helper.navigation {
      class cerberus.helper.navigation.Navigator {
      }
    }
  }
  

  namespace cerberus {
    namespace helper.proceed {
      class cerberus.helper.proceed.Proceeder {
      }
    }
  }
  

  namespace cerberus {
    namespace models.dialog {
      class cerberus.models.dialog.AlertDialog {
      }
    }
  }
  

  namespace cerberus {
    namespace models.dialog {
      class cerberus.models.dialog.PartyInfo {
      }
    }
  }
  

  namespace cerberus {
    namespace models.dialog {
      class cerberus.models.dialog.SpecificPartyInfo {
      }
    }
  }
  

  namespace cerberus {
    namespace models.list {
      class cerberus.models.list.PartyItem {
      }
    }
  }
  

  namespace cerberus {
    namespace models.list {
      class cerberus.models.list.QuantifiedListItem {
      }
    }
  }
  

  namespace cerberus {
    namespace models.list {
      class cerberus.models.list.SelectableListItem {
      }
    }
  }
  

  namespace cerberus {
    namespace models.list {
      class cerberus.models.list.SimpleListCell {
      }
    }
  }
  

  namespace cerberus {
    namespace models.list {
      class cerberus.models.list.SimpleListItem {
      }
    }
  }
  

  namespace cerberus {
    namespace models.list {
      class cerberus.models.list.TrailingListCell {
      }
    }
  }
  

  namespace cerberus {
    namespace models.list {
      class cerberus.models.list.TrailingListItem {
      }
    }
  }
  

  namespace cerberus {
    namespace models.table {
      class cerberus.models.table.VenueItem {
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      class cerberus.party.Contact {
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      class cerberus.party.DateTimeDifference {
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      class cerberus.party.Duration {
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      class cerberus.party.Party {
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      class cerberus.party.Person {
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      class cerberus.party.Venue {
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace addons {
        class cerberus.party.addons.Addon {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace addons {
        class cerberus.party.addons.AddonFactory {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace addons {
        class cerberus.party.addons.QuantifiedAddon {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace filter {
        enum PaidPercent {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace filter {
        enum PartyType {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace types {
        class cerberus.party.types.Birthday {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace types {
        class cerberus.party.types.Celebration {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace types {
        class cerberus.party.types.Farewell {
        }
      }
    }
  }
  

  namespace cerberus {
    namespace party {
      namespace types {
        class cerberus.party.types.Wedding {
        }
      }
    }
  }
  

  cerberus.Main -up-|> javafx.application.Application
  cerberus.controllers.BaseController .up.|> javafx.fxml.Initializable
  cerberus.controllers.ChartsController .up.|> javafx.fxml.Initializable
  cerberus.controllers.NewController .up.|> javafx.fxml.Initializable
  cerberus.controllers.NewController o-- cerberus.party.Venue : selectedVenue
  cerberus.controllers.NewController o-- cerberus.helper.navigation.Navigator : navigator
  cerberus.controllers.NewController o-- cerberus.party.Party : party
  cerberus.controllers.PartiesController .up.|> javafx.fxml.Initializable
  cerberus.helper.navigation.Navigator -up-|> java.util.Stack
  cerberus.models.dialog.AlertDialog -up-|> com.jfoenix.controls.JFXDialog
  cerberus.models.dialog.PartyInfo o-- cerberus.party.Party : party
  cerberus.models.list.PartyItem o-- cerberus.party.Party : party
  cerberus.models.list.SimpleListCell -up-|> com.jfoenix.controls.JFXListCell
  cerberus.models.list.TrailingListCell -up-|> com.jfoenix.controls.JFXListCell
  cerberus.models.table.VenueItem -up-|> com.jfoenix.controls.datamodels.treetable.RecursiveTreeObject
  cerberus.models.table.VenueItem o-- cerberus.party.Venue : venue
  cerberus.party.Party .up.|> org.dizitart.no2.mapper.Mappable
  cerberus.party.Party o-- cerberus.party.Contact : contact
  cerberus.party.Party o-- cerberus.party.Duration : on
  cerberus.party.Party o-- cerberus.party.Venue : venue
  cerberus.party.Person -up-|> cerberus.party.Contact
  cerberus.party.addons.QuantifiedAddon -up-|> cerberus.party.addons.Addon
  cerberus.party.types.Birthday .up.|> org.dizitart.no2.mapper.Mappable
  cerberus.party.types.Birthday -up-|> cerberus.party.Party
  cerberus.party.types.Birthday o-- cerberus.party.Person : person
  cerberus.party.types.Celebration .up.|> org.dizitart.no2.mapper.Mappable
  cerberus.party.types.Celebration -up-|> cerberus.party.Party
  cerberus.party.types.Farewell .up.|> org.dizitart.no2.mapper.Mappable
  cerberus.party.types.Farewell -up-|> cerberus.party.Party
  cerberus.party.types.Wedding .up.|> org.dizitart.no2.mapper.Mappable
  cerberus.party.types.Wedding -up-|> cerberus.party.Party
  cerberus.party.types.Wedding o-- cerberus.party.Person : bride
  cerberus.party.types.Wedding o-- cerberus.party.Person : groom




@enduml
